--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,52 @@
 [project]
-name = "primer"
-version = "0.1.0"
-description = "A small library to pre-train language models"
-readme = "README.md"
-requires-python = ">=3.11,<3.12"
-dependencies = [
-    "ipykernel>=6.29.5",
-    "ipywidgets>=8.1.5",
+  dependencies = [
     "colorlog>=6.8.2",
-    "ruff>=0.6.2",
-    "nvitop>=1.3.2",
-    "polars>=1.25.0",
-    "polars-u64-idx>=1.25.0",
-    "srsly>=2.4.8",
     "datasets>=3.0.0",
-    "huggingface-hub>=0.29.0",
+    "datatrove>=0.4.0",
     "hf-transfer>=0.1.8",
-    "tensorboard>=2.17.1",
-    "tbparse>=0.0.9",
-    "torch>=2.6.0",
-    "lightning>=2.4.0",
-    "transformers>=4.48.0",
-    "hydra-core>=1.3.2",
+    "huggingface-hub>=0.29.0",
     "hydra-colorlog>=1.2.0",
+    "hydra-core>=1.3.2",
     "hydra-joblib-launcher>=1.2.0",
     "hydra-submitit-launcher>=1.2.0",
+    "lightning>=2.4.0",
+    "nvitop>=1.3.2",
     "omegaconf>=2.3.0",
-    "datatrove>=0.4.0",
+    "polars-u64-idx>=1.25.0",
+    "polars>=1.25.0",
+    "ruff>=0.6.2",
+    "srsly>=2.4.8",
+    "tbparse>=0.0.9",
+    "tensorboard>=2.17.1",
+    "torch>=2.6.0",
     "torchdata>=0.11.0",
-]
+    "transformers>=4.48.0",
+  ]
+  description = "A small library to pre-train language models"
+  name = "primer"
+  readme = "README.md"
+  requires-python = ">=3.11,<3.12"
+  version = "0.1.0"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+  build-backend = "hatchling.build"
+  requires      = [ "hatchling" ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+  packages = [ "src" ]
 
 [project.optional-dependencies]
-flash = ["flash-attn>=2.7.4"]
+  flash    = [ "flash-attn>=2.7.4" ]
+  notebook = [ "ipykernel>=6.29.5", "ipywidgets>=8.1.5" ]
+  plots    = [ "plotnine>=0.13.6", "scikit-misc>=0.5.1" ]
 
 [tool.uv]
-cache-dir = "./.uv_cache"
-no-build-isolation-package = ["flash-attn"]
+  cache-dir                  = "./.uv_cache"
+  no-build-isolation-package = [ "flash-attn" ]
 
 [[tool.uv.dependency-metadata]]
-name = "flash-attn"
-requires-dist = ["torch", "einops"]
+  name          = "flash-attn"
+  requires-dist = [ "einops", "torch" ]
 
 
 # ===================
