--- a/conf/train_conf.yaml
+++ b/conf/train_conf.yaml
@@ -3,23 +3,22 @@
 # =========================
 defaults:
   - loggers:
-    - tensorboard
+      - tensorboard
   - /callbacks:
-    - lr_monitor
-    - grad_norm
-    - speed_monitor
-    - grad_accum
-    - model_checkpoint
-  - override hydra/job_logging: colorlog
-  - override hydra/hydra_logging: colorlog
+      - lr_monitor
+      - grad_norm
+      - speed_monitor
+      - grad_accum
+      - model_checkpoint
+  - override /hydra/job_logging: colorlog
+  - override /hydra/hydra_logging: colorlog
   - _self_
-
 
 hydra:
   job_logging:
     formatters:
       colorlog:
-        format: '[%(cyan)s%(asctime)s%(reset)s][%(blue)s%(name)s%(reset)s][%(log_color)s%(levelname)s%(reset)s] - %(message)s'
+        format: "[%(cyan)s%(asctime)s%(reset)s][%(blue)s%(name)s%(reset)s][%(log_color)s%(levelname)s%(reset)s] - %(message)s"
         log_colors:
           DEBUG: purple
           INFO: green
@@ -34,26 +33,26 @@ hydra:
     dir: ./outputs/multirun/${out_parent_folder}
     subdir: ${run_folder}_${hydra.job.id}
 
-# convenience
-tok_path: ${pwd}/outputs/tokenizers/${tok_name}
-run_folder: ${model}_${dataset}_${tok_name}
-# run_folder: ${dataset}/${model}_${tok_name_${now:%Y-%m-%d}T${now:%H-%M-%S}
+# Folder structure
+pwd: ./
+out_parent_folder: training
+run_folder: run_${now:%Y-%m-%d}T${now:%H-%M-%S}
 
-out_parent_folder: model_train
-tok_name: bpe32000minipile
+# Tokenizer
+tok_path: "???"
+tok_subfolder: null
 
-dataset: minipile
-pwd: /home/pl487/merge-effect/
-train_data_path: ${pwd}/data/${dataset}/${tok_name}/train
-val_data_path: ${pwd}/data/${dataset}/${tok_name}/validation
+# Data paths
+train_data_path: "???"
+val_data_path: "???"
 
-model: me100M
+# Model training
+model: "???"
 resume_from_checkpoint: null
 save_initial_checkpoint: true
 
 seed: 42
 torch_compile: true
-
 
 data:
   batch_size: 32
@@ -66,7 +65,6 @@ data:
   prefetch_factor: 2
   multiprocessing_context: null
 
-
 optim:
   optim_name: adamw
   lr: 6e-4
@@ -75,13 +73,12 @@ optim:
     fused: true
     eps: 1e-8
     betas: [0.9, 0.95]
-  scheduler_name: warmup_stable_decay  # cosine_with_min_lr
+  scheduler_name: warmup_stable_decay # cosine_with_min_lr
   num_warmup_steps: 2000
   scheduler_kwargs:
     num_stable_steps: 44000
     num_decay_steps: 4000
     min_lr_ratio: 0.01
-
 
 trainer:
   accelerator: gpu
