update primer to work with hydra

--- a/conf/callbacks/grad_accum.yaml
+++ b/conf/callbacks/grad_accum.yaml
@@ -1,4 +1,4 @@
 grad_accum:
-  _target_: src.callbacks.gradient_accumulation.GradientAccumulationScheduler
+  _target_: primer.callbacks.gradient_accumulation.GradientAccumulationScheduler
   scheduling:
     0: 1
