--- a/conf/loggers/tensorboard.yaml
+++ b/conf/loggers/tensorboard.yaml
@@ -1,5 +1,5 @@
 tensorboard:
-  _target_: src.trainer.TensorBoardLogger
+  _target_: primer.trainer.TensorBoardLogger
   save_dir: ./
   name: ''
   version: null  # ./
