--- a/conf/callbacks/lr_monitor.yaml
+++ b/conf/callbacks/lr_monitor.yaml
@@ -1,5 +1,5 @@
 lr_monitor:
-  _target_: src.callbacks.lr_monitor.SimpleLearningRateMonitor 
+  _target_: primer.callbacks.lr_monitor.SimpleLearningRateMonitor 
   # _target_: lightning.pytorch.callbacks.LearningRateMonitor
   # logging_interval: step
   # log_momentum: false
