--- a/conf/callbacks/model_checkpoint.yaml
+++ b/conf/callbacks/model_checkpoint.yaml
@@ -1,5 +1,5 @@
 model_checkpoint:
-  _target_: src.callbacks.model_checkpoint.ModelCheckpoint
+  _target_: primer.callbacks.model_checkpoint.ModelCheckpoint
   dirpath: .checkpoints
   filename: '{step}'
   enable_version_counter: false
