--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@
     "datasets>=3.0.0",
     "datatrove>=0.4.0",
     "hf-transfer>=0.1.8",
+    "hf-xet>=1.0.3",
     "huggingface-hub>=0.29.0",
     "hydra-colorlog>=1.2.0",
     "hydra-core>=1.3.2",
@@ -14,6 +15,7 @@
     "omegaconf>=2.3.0",
     "polars-u64-idx>=1.25.0",
     "polars>=1.25.0",
+    "rich>=13.6.0",
     "ruff>=0.6.2",
     "srsly>=2.4.8",
     "tbparse>=0.0.9",
@@ -21,8 +23,7 @@
     "torch>=2.6.0,<2.7.0",
     "torchdata>=0.11.0",
     "transformers>=4.48.0",
-    "rich>=13.6.0",
-]
+  ]
   description = "A small library to pre-train language models"
   name = "primer"
   readme = "README.md"
@@ -37,9 +38,11 @@
   packages = [ "src/primer" ]
 
 [project.optional-dependencies]
-  flash    = [ "flash-attn>=2.7.4" ]
-  notebook = [ "ipykernel>=6.29.5", "ipywidgets>=8.1.5" ]
-  plots    = [ "plotnine>=0.13.6", "scikit-misc>=0.5.1" ]
+  flash     = [ "flash-attn>=2.7.4" ]
+  notebook  = [ "ipykernel>=6.29.5", "ipywidgets>=8.1.5" ]
+  plots     = [ "plotnine>=0.13.6", "scikit-misc>=0.5.1" ]
+  # inference = [ "vllm>=0.8.5.post1" ]
+
 
 [tool.uv]
   cache-dir                  = "./.uv_cache"
