--- a/conf/train_conf.yaml
+++ b/conf/train_conf.yaml
@@ -10,6 +10,7 @@ defaults:
       - speed_monitor
       - grad_accum
       - model_checkpoint
+  - model: llama
   - override /hydra/job_logging: colorlog
   - override /hydra/hydra_logging: colorlog
   - _self_
@@ -47,7 +48,6 @@ train_data_path: "???"
 val_data_path: "???"
 
 # Model training
-model: "???"
 resume_from_checkpoint: null
 save_initial_checkpoint: true
 
@@ -92,5 +92,5 @@ trainer:
   gradient_clip_algorithm: norm
   val_check_interval: 2000
   max_steps: 50_000
-  limit_val_batches: 500
-  # limit_train_batches: 10
+  limit_val_batches: null
+  limit_train_batches: null
