--- a/conf/model/llama.yaml
+++ b/conf/model/llama.yaml
@@ -1,6 +1,6 @@
 name: llama
 model_type: llama
-hidden_act: "silu"
+hidden_act: silu
 hidden_size: 768
 intermediate_size: 3072
 num_attention_heads: 24
