add sequence and doc shuffling #2

--- a/conf/train_conf.yaml
+++ b/conf/train_conf.yaml
@@ -57,7 +57,7 @@ torch_compile: true
 data:
   batch_size: 32
   eval_batch_size: 64
-  shuffle: true
+  shuffle_seed: null  # no shuffling
   drop_last: false
   num_workers: 8
   pin_memory: true
