--- a/conf/train_conf.yaml
+++ b/conf/train_conf.yaml
@@ -58,7 +58,7 @@ data:
   batch_size: 32
   eval_batch_size: 64
   shuffle_seed: null  # no shuffling
-  drop_last: false
+  drop_last: true
   num_workers: 8
   pin_memory: true
   persistent_workers: false
