--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
     "datasets>=3.0.0",
     "datatrove>=0.4.0",
     "hf-transfer>=0.1.8",
-    "huggingface-hub>=0.29.0",
+    "huggingface-hub[cli]>=0.29.0",
     "hydra-colorlog>=1.2.0",
     "hydra-core>=1.3.2",
     "hydra-joblib-launcher>=1.2.0",
