--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
     "datasets>=3.0.0",
     "datatrove>=0.4.0",
     "hf-transfer>=0.1.8",
-    "huggingface-hub>=0.29.0",
+    "huggingface-hub[cli]>=0.29.0",
     "hydra-colorlog>=1.2.0",
     "hydra-core>=1.3.2",
     "hydra-joblib-launcher>=1.2.0",
@@ -18,7 +18,7 @@
     "srsly>=2.4.8",
     "tbparse>=0.0.9",
     "tensorboard>=2.17.1",
-    "torch>=2.6.0",
+    "torch>=2.6.0,<2.7.0",  # TODO: Ensure compatibility with flash-attn, can upgrade to 2.7 later
     "torchdata>=0.11.0",
     "transformers>=4.48.0",
     "rich>=13.6.0",
