--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@
   packages = [ "src/primer" ]
 
 [project.optional-dependencies]
-  flash    = [ "flash-attn>=2.7.4" ]
+  flash    = [ "flash-attn==2.7.4.post1" ]
   notebook = [ "ipykernel>=6.29.5", "ipywidgets>=8.1.5" ]
   plots    = [ "plotnine>=0.13.6", "scikit-misc>=0.5.1" ]
 
