--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,20 +9,20 @@
     "hydra-core>=1.3.2",
     "hydra-joblib-launcher>=1.2.0",
     "hydra-submitit-launcher>=1.2.0",
-    "lightning>=2.4.0",
+    "lightning==2.5.1.post0",
     "nvitop>=1.3.2",
     "omegaconf>=2.3.0",
     "polars-u64-idx>=1.25.0",
     "polars>=1.25.0",
+    "rich>=13.6.0",
     "ruff>=0.6.2",
     "srsly>=2.4.8",
     "tbparse>=0.0.9",
     "tensorboard>=2.17.1",
-    "torch>=2.6.0,<2.7.0",  # TODO: Ensure compatibility with flash-attn, can upgrade to 2.7 later
+    "torch>=2.6.0,<2.7.0",            # TODO: Ensure compatibility with flash-attn, can upgrade to 2.7 later
     "torchdata>=0.11.0",
     "transformers>=4.48.0",
-    "rich>=13.6.0",
-]
+  ]
   description = "A small library to pre-train language models"
   name = "primer"
   readme = "README.md"
@@ -35,6 +35,14 @@
 
 [tool.hatch.build.targets.wheel]
   packages = [ "src/primer" ]
+
+[[tool.uv.index]]
+  explicit = true
+  name     = "pytorch-cu124"
+  url      = "https://download.pytorch.org/whl/cu124"
+
+[tool.uv.sources]
+  torch = [ { index = "pytorch-cu124" } ]
 
 [project.optional-dependencies]
   flash    = [ "flash-attn==2.7.4.post1" ]
