--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@
     "tensorboard>=2.17.1",
     "torch>=2.6.0,<2.7.0",            # TODO: Ensure compatibility with flash-attn, can upgrade to 2.7 later
     "torchdata>=0.11.0",
-    "transformers>=4.48.0",
+    "transformers[torch]>=4.48.0",
   ]
   description = "A small library to pre-train language models"
   name = "primer"
