add zloss implementation and liger kernel

--- a/conf/train_conf.yaml
+++ b/conf/train_conf.yaml
@@ -70,6 +70,7 @@ optim:
   optim_name: adamw
   lr: 6e-4
   grad_acc_schedule: { 0: 2 }
+  zloss_factor: 1e-3
   weight_decay: 0.01
   optim_kwargs:
     fused: true
